--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://developer.fedoraproject.org" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
+encoding: utf-8
 
 # Build settings
 markdown: kramdown
