Explicitely exclude LICENSE file from the build

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ exclude:
   - "*.py"
   - "*.txt"
   - "static/**/*.html"
+  - "LICENSE"
   - "**/LICENSE"
   - "**/LICENSE-MIT"
   - "**/README.md"
