_config.yml: rename gems -> plugins
Deprecation: The 'gems' configuration option has been renamed to 'plugins'.

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ encoding: utf-8
 markdown: kramdown
 
 # Dependencies
-gems:
+plugins:
   - jekyll-lunr-js-search
   - jekyll-sitemap
   - jekyll-email-protect
